--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,28 +1,27 @@
-<!DOCTYPE html>
+{%extends 'rango/base.html'%}
+{%load staticfiles%}
 
-{% load staticfiles %}
+{% block title_block %}
+    Homepage
+{% endblock %}
 
-<html>
+{%block body_block%}
+    <h1>Rango says...</h1>
 
-    <head>
-        <title>Rango</title>
-    </head>
+    <div>
+        hey there partner! <br />
+        <strong>{{ boldmessage }}</strong><br />
+    </div>
 
-    <body>
-        <h1>Rango says...</h1>
-
-        <div>
-            hey there partner! <br />
-            <strong>{{ boldmessage }}</strong><br />
-        </div>
-
-        <div>
+    <div>
         {% if categories %}
             <h2>Most Liked Categories</h2>
             <ul>
             {% for category in categories %}
                 <li>
-                    <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
+                    <a href="{% url 'rango:show_category' category.slug %}">
+                        {{ category.name }}
+                    </a>
                 </li>
             {% endfor %}
             </ul>
@@ -46,12 +45,8 @@
         {% endif %}
         </div>
 
-        <div>
-            <a href="/rango/about/">About</a><br />
-            <a href="/rango/add_category/">Add a New Category</a><br/>
-            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-        </div>
+    <div>
+        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+    </div>
 
-    </body>
-
-</html>
+{% endblock %}
