--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -9,7 +9,12 @@
     <h1>Rango says...</h1>
 
     <div>
-        hey there partner! <br />
+        {% if user.is_authenticated %}
+            howdy {{ user.username }}!
+        {% else %}
+            hey there partner!
+        {% endif %}
+        <br />
         <strong>{{ boldmessage }}</strong><br />
     </div>
 
