--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -10,6 +10,7 @@
     <div>
         here is the about page. <br />
         <strong>{{ boldmessage }}</strong><br />
+        <strong>Visits: {{ visits }}</strong><br />
     </div>
 
     <div>
